WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
162227
REGRESSION (
r201090
): Setting style.webkitTextSizeAdjust does not change text change on iPad
https://bugs.webkit.org/show_bug.cgi?id=162227
Summary
REGRESSION (r201090): Setting style.webkitTextSizeAdjust does not change text...
Daniel Bates
Reported
2016-09-19 13:13:42 PDT
On an iPad running iOS 10 perform the following: 1. Visit the following data URL: <data:text/html,<!DOCTYPE%20html><p%20id="test">This%20is%20an%20example%20sentence.</p><button%20onclick="document.getElementById('test').style.webkitTextSizeAdjust%20=%20'200%'">Make%20text%20200%%20larger</button>>. 2. Tap the "Make text 200% larger" button. The size of the text above the button stays the same. But it should have increased in size by 200%. Compare the behavior of following these steps on an iPhone running iOS 10.
Attachments
Patch and Layout Tests
(20.91 KB, patch)
2016-09-19 13:36 PDT
,
Daniel Bates
simon.fraser
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews103 for mac-yosemite
(908.14 KB, application/zip)
2016-09-19 14:31 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews117 for mac-yosemite
(1.56 MB, application/zip)
2016-09-19 14:38 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Daniel Bates
Comment 1
2016-09-19 13:14:11 PDT
<
rdar://problem/27201529
>
Daniel Bates
Comment 2
2016-09-19 13:36:31 PDT
Created
attachment 289252
[details]
Patch and Layout Tests
Build Bot
Comment 3
2016-09-19 14:31:12 PDT
Comment on
attachment 289252
[details]
Patch and Layout Tests
Attachment 289252
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/2107628
New failing tests: fast/text-autosizing/ios/text-size-adjust-inline-style.html fast/text-autosizing/ios/programmatic-text-size-adjust.html fast/text-autosizing/ios/ipad/text-size-adjust-inline-style.html fast/text-autosizing/ios/ipad/programmatic-text-size-adjust.html
Build Bot
Comment 4
2016-09-19 14:31:15 PDT
Created
attachment 289256
[details]
Archive of layout-test-results from ews103 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 5
2016-09-19 14:38:25 PDT
Comment on
attachment 289252
[details]
Patch and Layout Tests
Attachment 289252
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/2107631
New failing tests: fast/text-autosizing/ios/text-size-adjust-inline-style.html fast/text-autosizing/ios/programmatic-text-size-adjust.html fast/text-autosizing/ios/ipad/text-size-adjust-inline-style.html fast/text-autosizing/ios/ipad/programmatic-text-size-adjust.html
Build Bot
Comment 6
2016-09-19 14:38:29 PDT
Created
attachment 289260
[details]
Archive of layout-test-results from ews117 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews117 Port: mac-yosemite Platform: Mac OS X 10.10.5
Daniel Bates
Comment 7
2016-09-21 10:47:02 PDT
Committed
r206217
: <
http://trac.webkit.org/changeset/206217
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug